--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name" : "node-js-getting-started",
+  "name" : "web-daw",
   "version": "0.1.5",
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/harolato/web-daw"
   },
   "keywords": [
     "node",
