--- a/package.json
+++ b/package.json
@@ -24,7 +24,17 @@
     "express"
   ],
   "devDependencies": {
+    "browserify": "^12.0.1",
+    "connect-livereload": "^0.5.4",
+    "express": "^4.13.3",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0"
+    "gulp-browserify": "^0.5.1",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-embedlr": "^0.5.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-util": "^3.0.7",
+    "tiny-lr": "^0.2.1"
   }
 }
