--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,13 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+# webstorm
+.idea/
+
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 public/assets/*
 !public/assets/scripts/*
 !public/assets/stylesheets/*
-#webstorm
-.idea
+
