--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,6 @@ build/Release
 node_modules
 public/assets/*
 !public/assets/scripts/*
+!public/assets/font-awesome/css/*
 !public/assets/stylesheets/*
 
