--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@ node_modules
 public/assets/*
 !public/assets/scripts/*
 !public/assets/font-awesome/css/*
+!public/assets/font-awesome/css/
 !public/assets/stylesheets/*
