--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
-#public/assets/*
+public/assets/*
 #!public/assets/scripts/
 #!public/assets/font-awesome/css/*
 #!public/assets/font-awesome/css/
